@@ -790,6 +790,7 @@ ConfigView.label.prioritizefirstpiece=Prioritize first and last piece of file(s)
 ConfigView.label.prioritizefirstpiece.tooltip=Attempts to download the very beginning and very end of a file first.\nFor support of early previewing.
 ConfigView.section.file.confirm_data_delete=Confirm when deleting data
 ConfigView.section.file.confirm_data_delete.tooltip=Confirm data deletion when using 'Remove and Delete...'
+ConfigView.section.file.delete.include_files_outside_save_dir=When deleting data, allow files linked outside torrent save directory to be removed also
 TrayWindow.menu.startalldownloads=Start All Downloads
 SystemTray.menu.startalltransfers=Start All Transfers
 sharing.progress.title=Sharing Progress
